--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1,4 +1,5 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
-@import './prism.css';
 @import 'tailwindcss/utilities';
+
+@import 'highlight.js/styles/base16/edge-dark'
